--- a/frontend/src/styles/worker-register.css
+++ b/frontend/src/styles/worker-register.css
@@ -1,36 +1,49 @@
-.main {
-    /* fallback for old browsers */
-    /* background-color: #a1c4fd; */
-  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: #fff
-  
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    /* background: linear-gradient(to right, rgba(161, 196, 253, 1), rgba(194, 233, 251, 1)) */
-  }
-  
-  .bg-indigo {
-    background-color: var(--primary-color);
-  }
-  
-  
+.bg-indigo {
+  background-color: var(--secondary-color);
+}
 
-  
-  /* @media (max-width: 758px) { */
-    .card-registration-2 .bg-indigo {
-      border-bottom-left-radius: 15px;
-      border-bottom-right-radius: 15px;
-    }
-  /* } */
-  
-  /* @media (min-width: 759px) { */
-    .card-registration-2 .bg-white {
-      border-top-left-radius: 15px;
-      border-bottom-left-radius: 15px;
-    }
-  /* } */
-  
- .card-registration{
-    width: 1400px;
-    /* height:1700px; */
- }
+.bg-indigo {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.bg-white {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.card-registration {
+  width: 75rem;
+}
+
+.worker-register {
+  margin-right: 200px;
+  margin-left: -100px;
+  margin-top: 15px;
+  margin-bottom: 50px;
+  /* padding: 0; */
+}
+.disable-scroll {
+  overflow: hidden;
+}
+
+body {
+  padding-top: 10px;
+}
+
+.card-registration input[type="text"],
+.card-registration input[type="email"],
+.card-registration input[type="password"],
+.card-registration select {
+  background-color: white;
+}
+.bg-color {
+  background-color: #fff7f7;
+}
+
+.ppp {
+  color: var(--heading-color);
+  text-decoration: none;
+  margin-left: 5px;
+  font-weight: 500;
+}
