--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -11,7 +11,7 @@
 }
 
 .footer .logo img {
-    width: 38%;
+    width: 50%;
     /* margin-bottom: 1rem; */
 }
 
@@ -25,11 +25,11 @@
 }
 
 
-.social__links {
+/* .social__links {
     margin-top: 40px;
     margin-left: 7px;
-
-}
+    padding-left: 0px;
+} */
 
 .social__links span a {
     text-decoration: none;
